--- a/app/views/application/_description.html.haml
+++ b/app/views/application/_description.html.haml
@@ -19,7 +19,7 @@
       = link_to "Edit #{model_name} info", "#", class: "edit-description edit-#{model_name}-description"
 
   - if can? :edit_description, model
-    = form_tag send("edit_description_#{model_name}_path"), :id => "description-edit-form", :class => "hidden", :remote => true do |f|
+    = form_tag send("edit_description_#{model_name}_path", model), :id => "description-edit-form", :class => "hidden", :remote => true do |f|
       = hidden_field_tag 'id'
       .control-group
         - class_str = 'inputError limit-250' if model_name == "group"
