--- a/app/views/discussions/_title.html.haml
+++ b/app/views/discussions/_title.html.haml
@@ -15,3 +15,5 @@
     = link_to image_tag("dropdown.png"), "#", class: "dropdown-toggle", 'data-toggle' => 'dropdown'
     %ul.dropdown-menu.pull-right
       %li= link_to "Edit discussion title", "#", :id => "edit-title"
+      -if can? :remove, discussion
+        %li= link_to "Remove discussion", remove_discussion_path(discussion), method: :post, confirm: "Are you sure you want to remove this discussion?"
