--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -240,6 +240,10 @@ form {
     margin: 1em 0 0.2em 0;
   }
 
+  input[type="submit"] {
+    margin: 1em 0 0 0;
+  }
+
   /* this is a little mess that needs to be resolved*/
   input[type="checkbox"] {
     margin-top: 10px;
