Add search form to dashboard

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -3,6 +3,7 @@
   .clearfix
     =render 'application/helper_bot'
     = icon_button(new_discussion_path, 'Start a discussion', '/assets/topic-18.png', 'start-new-discussion')
+    = render 'discussions/search_filter'
   .row.main-content
     %section.span8
       %ul.selector-list.bordered
