--- a/app/views/discussions/index.html.haml
+++ b/app/views/discussions/index.html.haml
@@ -1,6 +1,6 @@
 %ul.selector-list
   #discussion-list
-    - if @discussions_without_motions.exists?
+    - if @discussions_without_motions.present?
       - @discussions_without_motions.each do |discussion|
         %li.selector-item= render '/discussions/discussion_preview', discussion: discussion, this_group: @group
     - elsif @no_discussions_exist == true
