Add style for highlighting search results on discussions list

--- a/app/assets/stylesheets/discussions.css.scss
+++ b/app/assets/stylesheets/discussions.css.scss
@@ -420,3 +420,10 @@ li.selector-item .discussion-preview:hover {
   border-bottom: 1px solid $light-grey;
   min-height: 40px;
 }
+.discussions-search-form {
+  float: right;
+  margin-right: 265px;
+}
+.highlight {
+    background-color: #FFFF88;
+}
