Add search partial to group show, js for search

--- a/app/assets/stylesheets/discussions.css.scss
+++ b/app/assets/stylesheets/discussions.css.scss
@@ -439,5 +439,6 @@ li.selector-item .discussion-preview:hover {
   margin-right: 265px;
 }
 .highlight {
-    background-color: #FFFF88;
+  font-weight: 600;
+  text-decoration: underline;
 }
