--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -4,6 +4,7 @@
   =render 'application/helper_bot'
   - if can? :create, @discussion
     = icon_button(new_discussion_path(:group_id => @group.id), 'Start a discussion', '/assets/topic-18.png', 'start-new-discussion')
+  = render 'discussions/search_filter'
 .row.main-content
   %section.span8
     %ul.selector-list.bordered
