--- a/app/views/discussions/show.html.haml
+++ b/app/views/discussions/show.html.haml
@@ -51,4 +51,4 @@
                       - else
                         %li.selector-item= render '/motions/motion_preview', motion: closed_motion, this_group: @group
 - if @current_motion
-  = render '/motions/edit_close_date', :motion => @current_motion, :input_time => @input_time
+  = render '/motions/edit_close_date', motion: @current_motion, current_close_date: @current_motion.close_date.localtime
