WIP. Note: this schema is the perfect schema.

--- a/app/assets/stylesheets/motions.css.scss
+++ b/app/assets/stylesheets/motions.css.scss
@@ -4,7 +4,6 @@
 /*  New & Edit motion form */
 #motion-form{
   #close-date-label { display: block; }
-
   .date-error-message {
     font-size: $font-small;
     line-height: 1em;
@@ -13,10 +12,7 @@
     margin-left: 5px;
     color: $error-color;
   }
-}
-#motion-form, #edit-close-date.modal #closing-inputs {
-  #input_date{ width: 140px; display: inline-block; }
-  select { width: 100px; display: inline-block; }
+  .date-hour { padding-top: 18px; }
 }
 
 /*** motion preview ***/
