--- a/app/views/motions/_edit_close_date.html.haml
+++ b/app/views/motions/_edit_close_date.html.haml
@@ -3,15 +3,15 @@
     %button.close{"data-dismiss" => "modal"}×
     %h3= "Change the close date for the proposal '#{motion.name}'"
   = simple_form_for motion, :url => edit_close_date_motion_path(motion.id), validate: true do |f|
-    .modal-body#closing-inputs
+    .modal-body
       .control-group
         = f.label :close_date, "Closing", {class: "control-label", for: "date-input", id: "close-date-label"}
         = text_field_tag :input_date, nil, class: "date-input validate-motion-close-date inputError"
-        = select_hour(@input_time, ampm: true)
+        = select_hour(@close_hour, ampm: true)
         %span.date-error-message
           ='Please give a future close date (The date you gave has past)'
       = f.input :close_date, as: :hidden
-      = hidden_field_tag :local_time, current_close_date
+      = hidden_field_tag :local_default_close_time, current_close_date
     .modal-footer
       = submit_tag "Change", class: "motion btn btn-info run-validations", id: 'change-close-date', :data => { :disable_with => "Changing" }
       = link_to "Cancel", "#", "data-dismiss" => "modal", class: "btn btn-small"
