Add ajax setting of user name
Edit name movedinto a partial

Extract method used to make code in settings page more understandable

rename or remove unnecessary classes

rename classes

remove unused class

fix failing specs

Client-side validation added for file size

set default gravatar

Set gravatar to be default after create

moved avatar methods to be private as only called by user

refactor avatar settings

create partial instead of helper

fix permalink

--- a/app/assets/stylesheets/discussions.css.scss
+++ b/app/assets/stylesheets/discussions.css.scss
@@ -207,6 +207,12 @@ pre{
   width: 15px;
 }
 
+.comment-anchor {
+  padding-top: 50px; 
+  margin-top: -50px;
+  display:block;
+}
+
 #content-activity {
   border-right: 1px solid $light-grey;
   min-height: 660px;
@@ -253,14 +259,13 @@ pre{
   }
   .activity-item-container {
     width: 388px;
-    float: left;
     margin-left: 45px;
     padding-bottom: 5px;
     border-bottom: 1px solid $light-grey;
     margin-bottom: 5px;
   }
   .activity-item-container.with-avatar {
-    margin-left: 10px;
+    margin-left: 0px;
     float: left;
   }
   .activity-item-avatar {
