--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,11 +1,7 @@
 - likes = comment.likes
-.clearfix{id: "comment-#{comment.id}"}
-  .activity-item-avatar.medium-user-avatar.avatar-canvas
-    - if comment.user.avatar_url
-      = image_tag comment.user.avatar_url(:medium)
-    - else
-      %span.medium-user-initials.initials-decoration
-        = comment.user.avatar_initials
+.clearfix
+  %a{class: "comment-anchor", id: "comment-#{comment.id}"}
+  = render 'avatar', user: comment.user, size: "medium", kind: nil, id: nil
   .activity-item-container.with-avatar
     .activity-item-comment-actor
       =link_to comment.user_name, "#", "title" => comment.user_name,
