--- a/app/views/notifications/_notification.html.haml
+++ b/app/views/notifications/_notification.html.haml
@@ -5,11 +5,15 @@
   - title_text = item.title
   - group_name = item.group_full_name
   - href = item.link
-  - avatar_url = item.avatar_url
-  - avatar_initials = item.avatar_initials
 
   - date = time_ago_in_words(notification.created_at)
   - class_name = notification.viewed_at.nil? ? " unread" : ""
+  - if user
+    - avatar_url = user.avatar_url(:medium)
+    - avatar_initials = user.avatar_initials
+  - else
+    - avatar_url = item.avatar_url
+    - avatar_initials = item.avatar_initials
 
   %li.selector-item{:class => "notification-item#{class_name}", :id => "notification-#{notification.id}" }
     %a{:href => href }
@@ -17,8 +21,7 @@
         - if avatar_url.present?
           = image_tag avatar_url
         - else
-          %span.medium-user-initials.initials-decoration
-            = avatar_initials
+          = avatar_initials
       %span.notification-content
         - unless notification.event_kind == "motion_closing_soon" || (notification.event_kind == "motion_closed" && user.nil?)
           %span.bold-name= user.name
