Added persistent group parameter field to markup for reference during search, added more relevant search error message

--- a/app/views/discussions/index.html.haml
+++ b/app/views/discussions/index.html.haml
@@ -3,6 +3,8 @@
     - if @discussions.exists?
       - @discussions.each do |discussion|
         %li.selector-item= render '/discussions/discussion_preview', discussion: discussion, this_group: @group
+    - elsif @no_discussions_found
+      %li.empty-list-message No discussions were found in the search.
     - elsif @no_discussions_exist
       %li.empty-list-message This group does not have any discussions yet.
   #discussions-loading
