--- a/app/views/discussions/_discussion_preview.html.haml
+++ b/app/views/discussions/_discussion_preview.html.haml
@@ -26,7 +26,7 @@
       - popover_content = render 'discussions/graph_preview_pop_over', :motion => discussion.current_motion, :user => current_user, :motion_activity =>  motion_activity
       .selector-pie-link{'data-title' => popover_title, 'data-content' => popover_content}
         .pie{:id => "graph_#{discussion.current_motion.id}"}
-          - if discussion.current_motion.voting? && motion_activity > 0
+          - if discussion.current_motion.open? && motion_activity > 0
             %span.activity-count.label.label-info
               = motion_activity
           - if user_signed_in?
