--- a/app/views/motions/_votes_table_vote.html.haml
+++ b/app/views/motions/_votes_table_vote.html.haml
@@ -1,7 +1,7 @@
 .position-row.clearfix
   %div{ :class => 'activity-icon ' + vote_icon_name(vote.position) }
   = link_to vote.user_name, "#", "title" => vote.user_name, "data-content" => "#{render 'users/name_popover', user: vote.user, group: motion.group}", :class => "user-name-with-popover"
-  - if vote.can_be_edited_by?(current_user) && motion.phase == 'voting'
+  - if vote.can_be_edited_by?(current_user) && motion.open?
     =link_to "edit", edit_motion_vote_path(motion, vote), class: 'btn btn-mini', id: 'edit-vote'
   .statement
   .word-break~ vote.statement
