--- a/app/views/application/_flash_messages.html.haml
+++ b/app/views/application/_flash_messages.html.haml
@@ -14,22 +14,11 @@
 -# SYSTEM MESSAGE
 -#
 
--#- if current_user && (not current_user.has_read_system_notice?)
-  -#.help-notice.alert-message{ "data-alert" => "alert", :class => "alert alert-info" }
-    -#= link_to "×", dismiss_system_notice_for_user_path,
-      -#:class => "close dismiss-help-notice", "data-dismiss" => "alert"
-    -#Hi there! We've just added a "notifications system" to Loomio.
-    -#Have a look at the top of this page - that's where you'll be notified when things happen on Loomio that are relevant to you.
-    -#%br
-    -#%br
-    -#It's going to take some experimenting and tweaking to get this system just right,
-    -#so if you have any feedback please don't hesitate to send us an email at contact@loomio.org.
-    -#%br
-    -#%br
-    -#This is just the beginning of our effort to improve notifications on Loomio.
-    -#Our next task will be making it easy for you to customise how/when Loomio sends you emails.
-    -#Thanks for all your help and patience so far!
-    -#%br
-    -#%br
-    -#= link_to "Click here to dismiss this message", dismiss_system_notice_for_user_path,
-      -#:class => "dismiss-help-notice", "data-dismiss" => "alert"
+- if current_user && (not current_user.has_read_system_notice?)
+  .help-notice.alert-message{ "data-alert" => "alert", :class => "alert alert-danger" }
+    = link_to "×", dismiss_system_notice_for_user_path,
+      :class => "close dismiss-help-notice", "data-dismiss" => "alert"
+    %p
+      Hey there, <strong>Loomio is going to shut down temporarily</strong> for some upgrades. We'll be shutting the site down at approximately 1:30pm NZDT (UTC +13). The process should take less than half an hour, so we hope to be back up by 2:00pm NZDT.
+    %p
+      Thanks for your patience! Hope it's going well out there...
