add meta tag for facebook insights statistics

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,7 @@
     %link{:href => "https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.17/themes/flick/jquery-ui.css", :rel => "stylesheet", :type => "text/css"}
     %meta{'name' => 'description', :content => 'Loomio is a free and open-source web application that helps groups make better decisions together.'}
 
+    %meta{property:"fb:admins", content:"219748918130373"}
     =render 'google_analytics'
 
   %body{class: "#{controller_name} #{action_name}"}
