New group request and contribution wizard pages

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,4 +1,4 @@
-body.sessions.new, body.pages.show, body.woc.index{
+body.sessions.new, body.pages.show, body.woc.index, body.groups_request.create {
   color: black;
 
   p, label{
