--- a/app/views/group_requests/confirmation.html.haml
+++ b/app/views/group_requests/confirmation.html.haml
@@ -6,6 +6,6 @@
     .row
       .span6.offset2
         %p &nbsp;
-        %p We're taking care to not grow too quickly, so we're manually approving each request. We’ll be in contact soon to let you know what to do next.
+        %p Please check your email for a verification link so that we know communication with you is getting through. Make sure to click the link inside the email to finalise your request. Contact us at <a href=mailto:contact@loomio.org>contact@loomio.org </a> if you don't receive an email.
       .span2
         =image_tag("mascot-medium-lefthand.gif")
