--- a/app/views/group_requests/_form.html.haml
+++ b/app/views/group_requests/_form.html.haml
@@ -1,19 +1,24 @@
 .row
-  .span5.offset2
+  .span6.offset2
     = simple_form_for @group_request, :validate => true do |f|
-      = f.input :name,  :label => "Group name"
-      = f.input :description, :placeholder => "Tell us a bit about your group, and why you'd like to use Loomio"
-      = f.input :admin_email, :label => "Your email"
-      = f.input :expected_size, :label => "Approximate number of people involved"
-      %h2 How spread out is your group?
-      = f.input :distribution_metric, :label => "On a scale of 1 to 5", :collection => {'1 - Our whole group has regular in-person meetings' => 0, '2 - Most of us meet in person regularly' => 1, '3 - Some of us meet in person' => 2, '4 - Most of our interactions are online' => 3, '5 - All of our interactions are online' => 4}, :as => :radio_buttons
-      %h2 What type of group is it?
-      = f.input :sectors_metric, :label => false, :as => :check_boxes, :collection => {'Community' => 'community', 'Business' => 'business', 'Government' => 'government', 'Other:' => 'other'}, :validate => { :presence => true }
-      = f.input :other_sectors_metric, :label => false
-      %h2 Contribution
-      %p Most groups are making a regular financial contribution in return for use of the tool. On the other hand, we don't want money to be a barrier to entry for groups without a budget. Let us know if this sounds like you:
-      = f.input :cannot_contribute, :label => false, :inline_label => "Our group is not in a position to contribute financially"
+      %h1 Get your group on Loomio
+      We're in 'private beta' which means we're manually approving each group that asks to join Loomio. This means there might be a delay in getting you on board but you will hear from us within 48 hours.
+      %h2 Tell us about yourself
+      = f.input :admin_name, label: "What is your name?"
+      = f.input :admin_email, label: "What is your email address?"
+      = f.input "country_name"
+      %h2 Tell us about your group
+      = f.input :name, label: "What is the name of your group/organisation?"
+      = f.input :sectors, label: false, as: :check_boxes, collection: {'Community' => 'community', 'Business' => 'business', 'Government' => 'government', 'Other:' => 'other'}, :validate => { :presence => true }, label: "What type of group/organisation is it?"
+      = f.input :other_sector, label: false
+      = f.input :description, label: "Why do you want to use Loomio?", placeholder: "Tell us a bit about your group, and why you'd like to use Loomio"
+      = f.input :expected_size, label: "How many people to you expect to be in your loomio group?"
 
-      = f.submit 'Request new group', :class => "btn btn-large btn-info btn-block", id: "submit-group-request", :data => {:disable_with => "Request new group"}
+      %h1 We're trying something new
+      %p Balancing two principles: money shouldn't be a barrier to access; too achieve maximum  positive social impact on an international scale, Loomio need to be functionally viable.
+      %h2 How would you like to contribute?
+      = f.input :cannot_contribute, collection: {"My group/organisation can pay a subscription for Loomio" => false, "My group/organisation doesn't have the budget to pay for Loomio" => true}, as: :radio_buttons, label: ""
 
-      = f.input :robot_trap, :label => false, :placeholder => "Leave this field blank if you're a human", :input_html => { :class => "robot_trap" }
+      = f.submit 'Submit Request', :class => "btn btn-large btn-info btn-block", data: {disable_with: "Requesting new group"}, id: "submit-group-request"
+
+      = f.input :robot_trap, label: false, :placeholder => "Leave this field blank if you're a human", :input_html => { :class => "robot_trap" }
