--- a/app/views/discussions/_discussion_preview.html.haml
+++ b/app/views/discussions/_discussion_preview.html.haml
@@ -36,24 +36,32 @@
       .large-icon.pie-icon.activity-icon
 
 - if discussion.current_motion
-  :coffeescript
-    $ ->
-      # Display vote graph
-      make_the_graph = ->
-        @pie_graph_view = new Loomio.Views.Utils.GraphView
-          el: '.pie'
-          id_string: "graph_#{discussion.current_motion.id}"
-          legend: false
-          data: #{discussion.current_motion.votes_graph_ready.to_json.html_safe}
-          type: 'pie'
-          tooltip_selector: '#tooltip'
-          diameter: 25
-          padding: 1
-          gap: 1
+  :javascript
+    //Display vote graph
+    $(function() {
+      var make_the_graph;
+      console.log("here");
+      make_the_graph = function() {
+        console.log("in here");
+        return this.pie_graph_view = new Loomio.Views.Utils.GraphView({
+          el: '.pie',
+          id_string: "graph_#{discussion.current_motion.id}",
+          legend: false,
+          data: #{discussion.current_motion.votes_graph_ready.to_json.html_safe},
+          type: 'pie',
+          tooltip_selector: '#tooltip',
+          diameter: 25,
+          padding: 1,
+          gap: 1,
           shadow: 0.75
+        });
+      };
 
-      # IE8 FIX - for some reason we have to load the graph after everything else.
-      # Otherwise, the graph doesn't display in IE8.
-      #
-      # Ideally, we'd like to be able to delete this line:
-      $(window).load(make_the_graph)
+      // IE8 FIX - for some reason we have to load the graph after everything else.
+      // Otherwise, the graph doesn't display in IE8.
+      // 
+      // Ideally, we'd like to be able to delete this line:
+      //return $(window).load(make_the_graph);
+      make_the_graph();
+    });
+
