--- a/app/views/discussions/_add_comment.html.haml
+++ b/app/views/discussions/_add_comment.html.haml
@@ -2,8 +2,8 @@
   = form_tag add_comment_discussion_path(discussion), :remote => true, id: "new-comment-form" do
     = render 'avatar', user: current_user, size: "medium", kind: nil, id: nil
     #comment-input{ data: {group: @group.id} }
-      = text_area_tag 'comment', "", id: 'new-comment', placeholder: "Say something..."
-      = submit_tag "Post comment", class: "btn btn-small submit", id: 'post-new-comment', :data => {:disable_with => "Post comment"}
+      = text_area_tag 'comment', "", id: 'new-comment', placeholder: t(:comment_form_placeholder)
+      = submit_tag t(:comment_form_submit_button), class: "btn btn-small submit", id: 'post-new-comment', :data => {:disable_with => t(:comment_form_submit_button)}
   .dropdown#markdown-dropdown
     %a.dropdown-toggle{href:'#markdown-dropdown', id:'markdown-dropdown-link', 'data-toggle'=> 'dropdown'}
       = markdown_img(@uses_markdown)
