--- a/app/views/discussions/_description_history.html.haml
+++ b/app/views/discussions/_description_history.html.haml
@@ -25,6 +25,6 @@
       -else
         =link_to "Next", "#", :class => "disabled"
   .revision-content
-    %p= markdown(@discussion.description)
+    %p= conditional_markdown(@discussion.uses_markdown, @discussion.description)
 .modal-footer
   = link_to "Close", "#", "data-dismiss" => "modal", class: "btn btn-small btn-grey"
