--- a/app/views/discussions/show.html.haml
+++ b/app/views/discussions/show.html.haml
@@ -28,13 +28,13 @@
                       = render '/motions/motion_preview', motion: @current_motion, this_group: @group
                   - else
                     %li.selector-item.current-proposal
-                      = render @current_motion, unique_votes: @unique_votes
+                      = render @current_motion, unique_votes: @unique_votes, motion_markdown_preference: @current_motion.uses_markdown
                 - else
                   - if can? :create, Motion.new(discussion_id: @discussion.id)
                     = link_to t("create_new_proposal"), new_proposal_discussion_path(@discussion.id), class: 'btn btn-small new-proposal-btn', id: 'new-proposal'
                   %li.selector-item.empty-list-message= t :empty_decision_list
 
-            - if @discussion.motions.where("phase = 'closed'").count > 0
+            - if @discussion.closed_motions.exists?
               #previous-proposals
                 .clearfix
                   .large-icon.decision-icon
@@ -44,7 +44,7 @@
                   %ul.selector-list
                     - @discussion.closed_motions.each do |closed_motion|
                       - if closed_motion == @selected_motion
-                        %li.selector-item= render @selected_motion, unique_votes: @unique_votes, this_group: @group
+                        %li.selector-item= render @selected_motion, unique_votes: @unique_votes, this_group: @group, motion_markdown_preference: @selected_motion.uses_markdown
                       - else
                         %li.selector-item= render '/motions/motion_preview', motion: closed_motion, this_group: @group
 - if @current_motion
