--- a/app/views/discussions/_title.html.haml
+++ b/app/views/discussions/_title.html.haml
@@ -13,9 +13,11 @@
         .save-buttons.clearfix
           = submit_tag t(:save), class: 'btn btn-small run-validations', id: 'edit-title-submit', :data => {:disable_with => t(:saving)}
           = link_to t(:cancel), "#", id: 'cancel-edit-title'
-  .dropdown
-    = link_to image_tag("dropdown.png"), "#", id: "options-dropdown", class: "dropdown-toggle", 'data-toggle' => 'dropdown'
-    %ul.dropdown-menu.pull-right
-      %li= link_to t(:edit_discussion_title), "#", :id => "edit-title"
-      -if can? :destroy, discussion
-        %li= link_to t(:delete_discussion), "#", 'data-method-type' => 'delete', 'data-title' => t(:delete_discussion), 'data-body' => t(:confirm_delete), 'data-confirm-path' => discussion_path(discussion), class: 'confirm-dialog', id: 'delete-discussion'
+  - if can?(:edit_title, discussion) || can?(:destroy, discussion)
+    .dropdown
+      = link_to image_tag("dropdown.png"), "#", id: "options-dropdown", class: "dropdown-toggle", 'data-toggle' => 'dropdown'
+      %ul.dropdown-menu.pull-right
+        - if can? :edit_title, discussion
+          %li= link_to t(:edit_discussion_title), "#", :id => "edit-title"
+        -if can? :destroy, discussion
+          %li= link_to t(:delete_discussion), "#", 'data-method-type' => 'delete', 'data-title' => t(:delete_discussion), 'data-body' => t(:confirm_delete), 'data-confirm-path' => discussion_path(discussion), class: 'confirm-dialog', id: 'delete-discussion'
