--- a/app/views/discussions/index.html.haml
+++ b/app/views/discussions/index.html.haml
@@ -4,8 +4,8 @@
       - @discussions.each do |discussion|
         %li.selector-item= render '/discussions/discussion_preview', discussion: discussion, this_group: @group
     - elsif @no_discussions_exist
-      %li.empty-list-message This group does not have any discussions yet.
+      %li.empty-list-message= t :empty_discussion_list_group
   #discussions-loading
-    %li.selector-item.loading Loading...
+    %li.selector-item.loading= t :loading
 = paginate @discussions, :window => 3, :remote => :true
 - current_user.update_group_last_viewed_at(@group) if current_user && params[:group_id]
