--- a/app/views/users/set_markdown.js.erb
+++ b/app/views/users/set_markdown.js.erb
@@ -1,1 +1,1 @@
-$('#markdown-icon').replaceWith("<%= escape_javascript(markdown_img(current_user.uses_markdown?)) %>");
+$('#comment-markdown-dropdown .markdown-icon').replaceWith("<%= escape_javascript(markdown_img(current_user.uses_markdown?)) %>");
