--- a/app/views/application/_description.html.haml
+++ b/app/views/application/_description.html.haml
@@ -7,7 +7,7 @@
     .long-description.model-description
       ~ conditional_markdown(description_markdown_setting, model.description)
     <![endif]-->
-    
+
     <!--[if !IE 7]><!-->
     .short-description.model-description
       ~ conditional_markdown(description_markdown_setting, truncate(model.description, length: 500, omission: '...', separator: ' '))
@@ -15,13 +15,14 @@
       ~ conditional_markdown(description_markdown_setting, model.description)
     = link_to "Show More", "#", class: 'see-more' if too_long
     <!--<![endif]-->
-    
+
     - if can? :edit_description, model
       = link_to "Edit #{model_name} info", "#", class: "edit-description edit-#{model_name}-description", id: 'edit_description'
 
   - if can? :edit_description, model
     = form_tag send("edit_description_#{model_name}_path", model), :id => "description-edit-form", :class => "hidden", :remote => true do |f|
       = hidden_field_tag 'id'
+      = hidden_field_tag 'uses_markdown', description_markdown_setting, {class: 'uses_markdown'}
       .control-group
         - class_str = 'inputError limit-250' if model_name == "group"
         = text_area_tag 'description', model.description, {id: 'description-input', class: class_str, :autofocus => true }
@@ -30,3 +31,7 @@
       .save-buttons.clearfix
         = submit_tag "Save", class: 'btn btn-small btn-grey run-validations', id: 'add-description-submit', :data => {:disable_with => "Saving"}
         = link_to "Cancel", "#", id: 'cancel-add-description'
+        .dropdown#discussion-markdown-dropdown
+          %a.dropdown-toggle{href:'#discussion-markdown-dropdown', id:'discussion-markdown-dropdown-link', 'data-toggle'=> 'dropdown'}
+            = markdown_img(description_markdown_setting)
+          = render 'markdown_settings', model: model
