--- a/app/views/discussions/_add_comment.html.haml
+++ b/app/views/discussions/_add_comment.html.haml
@@ -4,7 +4,7 @@
     #comment-input{ data: {group: @group.id} }
       = text_area_tag 'comment', "", id: 'new-comment', placeholder: "Say something..."
       = submit_tag "Post comment", class: "btn btn-small submit", id: 'post-new-comment', :data => {:disable_with => "Post comment"}
-  .dropdown#markdown-dropdown
-    %a.dropdown-toggle{href:'#markdown-dropdown', id:'markdown-dropdown-link', 'data-toggle'=> 'dropdown'}
+  .dropdown#comment-markdown-dropdown
+    %a.dropdown-toggle{href:'#comment-markdown-dropdown', id:'comment-markdown-dropdown-link', 'data-toggle'=> 'dropdown'}
       = markdown_img(@uses_markdown)
     = render 'markdown_settings'
