--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -40,7 +40,12 @@ hr {
   .group-link-activity { float: right; }
   .button-icon { padding: 0 }
 }
-.popover { z-index: 10000; }
+.activity-item-body .popover h3 { padding: 8px 14px; }
+
+.popover {
+  width: 276px;
+  z-index: 10000;
+}
 
 .sub_group {font-size: $font-tiny;}
 
