the start of the killa featura

--- a/app/views/start_group_mailer/invite_admin_to_start_group.text.erb
+++ b/app/views/start_group_mailer/invite_admin_to_start_group.text.erb
@@ -1,3 +1,2 @@
-<% link = start_new_group_group_request_url(@group_request,
-                                            token: @group_request.token) %>
-<%= @message_body.gsub('{group_invitation_link}', link) %>
+<% link = invitation_path(@invitation) %>
+<%= @message_body.gsub('{invitation_link}', link) %>
