--- a/app/views/start_group_mailer/invite_admin_to_start_group.text.erb
+++ b/app/views/start_group_mailer/invite_admin_to_start_group.text.erb
@@ -1,2 +1,2 @@
-<% link = invitation_path(@invitation) %>
+<% link = invitation_url(@invitation) %>
 <%= @message_body.gsub('{invitation_link}', link) %>
