fixing fixing fixing

--- a/app/views/invitations/please_sign_in.html.haml
+++ b/app/views/invitations/please_sign_in.html.haml
@@ -6,7 +6,7 @@
     =f.input :email
     =f.input :password
     =f.input :password_confirmation
-    =f.submit t("devise.registrations.sign_up"), user_session
+    =f.submit t("devise.registrations.sign_up")
 .signin-form
   %p Already a loomio user? Sign in here:
   =simple_form_for(@user, url: user_session_path) do |f|
