--- a/app/assets/stylesheets/motions.css.scss
+++ b/app/assets/stylesheets/motions.css.scss
@@ -2,7 +2,7 @@
 @import "mixins";
 
 /*  New & Edit motion form */
-#motion-form{
+#motion-form, #group-setup {
   #close-date-label { display: block; }
 
   .date-error-message {
@@ -14,7 +14,7 @@
     color: $error-color;
   }
 }
-#motion-form, #edit-close-date.modal #closing-inputs {
+#motion-form, #edit-close-date.modal, #group-setup #closing-inputs {
   #input_date{ width: 140px; display: inline-block; }
   select { width: 100px; display: inline-block; }
 }
