--- a/app/views/group_setup/setup.html.haml
+++ b/app/views/group_setup/setup.html.haml
@@ -49,3 +49,6 @@
         .span5
           = link_to 'Next', '#', class: 'btn btn-info btn-large', id: 'next'
           = link_to 'Prev', '#', class: 'btn btn-large', id: 'prev'
+      .row
+        .span5
+          = "saved x minutes ago"
